Gpencil. Additive drawing doesn't work when creating fills #79772

Closed
opened 2020-08-14 11:58:58 +02:00 by Tomasz Kaye · 10 comments

System Information
Operating system: Darwin-19.3.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.5.5

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-09 00:04, hash: b522e834ec

Short description of error
With the additive drawing switch turned on, creating a fill on a new keyframe doesn't preserve fills or strokes from the previous keyframe.

Expected: with additive drawing switch turned on, creating a fill on a new frame would create a new keyframe that included all strokes and fills from the previous keyframe, plus the new fill.

Screenshot 2020-08-14 at 11.58.22.png
Screenshot 2020-08-14 at 11.58.27.png

Exact steps for others to reproduce the error

  • open attached blend file
  • tap in the right-hand shape to fill it
  • fills and stroked from the previous fills layer keyframe aren't preserved in the new keyframe that was created.

additivedrawingfillbug.blend

**System Information** Operating system: Darwin-19.3.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.5.5 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-09 00:04, hash: `b522e834ec` **Short description of error** With the additive drawing switch turned on, creating a fill on a new keyframe doesn't preserve fills or strokes from the previous keyframe. Expected: with additive drawing switch turned on, creating a fill on a new frame would create a new keyframe that included all strokes and fills from the previous keyframe, plus the new fill. ![Screenshot 2020-08-14 at 11.58.22.png](https://archive.blender.org/developer/F8779876/Screenshot_2020-08-14_at_11.58.22.png) ![Screenshot 2020-08-14 at 11.58.27.png](https://archive.blender.org/developer/F8779878/Screenshot_2020-08-14_at_11.58.27.png) **Exact steps for others to reproduce the error** * open attached blend file * tap in the right-hand shape to fill it * fills and stroked from the previous fills layer keyframe aren't preserved in the new keyframe that was created. [additivedrawingfillbug.blend](https://archive.blender.org/developer/F8779874/additivedrawingfillbug.blend)
Author

Added subscriber: @info-27

Added subscriber: @info-27

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Antonio Vazquez self-assigned this 2020-08-14 17:33:28 +02:00

Additive drawing is by layer, so only the active layer is affected. If you have the fill in a different layer, this layer is not included. To do what you want, we would need add an option to enable additive for all layers, but this cannot be consider as a bug, but as a feature request.,

Anyway, you can use I key menu, to duplicate your drawings.

image.png

Thanks for the report, bu following the policies of this website, I must close it because it cannot be consider a bug.

For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug

Additive drawing is by layer, so only the active layer is affected. If you have the fill in a different layer, this layer is not included. To do what you want, we would need add an option to enable additive for all layers, but this cannot be consider as a bug, but as a feature request., Anyway, you can use `I` key menu, to duplicate your drawings. ![image.png](https://archive.blender.org/developer/F8780587/image.png) Thanks for the report, bu following the policies of this website, I must close it because it cannot be consider a bug. For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug
Author

Additive drawing is by layer, so only the active layer is affected.

Yes. the bug report is about the active layer only. Adding a fill doesn't preserve strokes or fills from the previous keyframe on the active layer, as i believed 'additive drawing' was supposed to do.

>> Additive drawing is by layer, so only the active layer is affected. Yes. the bug report is about the active layer only. Adding a fill doesn't preserve strokes or fills from the previous keyframe on the active layer, as i believed 'additive drawing' was supposed to do.

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Ah, I see... I had missunderstood the bug.

Ah, I see... I had missunderstood the bug.

This issue was referenced by 36e4d4af5b

This issue was referenced by 36e4d4af5b01e0eb7f90ac34a8b7f8e01118f5fa

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79772
No description provided.