Fix T79772: Gpencil. Additive drawing doesn't work when creating fills

This option was not supported in Fill tool